# managesieve

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  parser.rs  types.rs
src/test_input/: response_capability-1.txt
